# sm

./: package.json  pnpm-lock.yaml  turbo.json
.trunk/: trunk.yaml
apps/decide/: package.json
apps/decide/pages/: index.tsx
apps/decide/pages/api/: decide.ts
apps/web/: middleware.ts  next.config.js  nomiddleware.ts  package.json
apps/web/pages/api/: test.ts
apps/web/wasm/: Cargo.toml
apps/web/wasm/pkg/: package.json  wasm.js  wasm_bg.wasm
