[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.59"
serde_derive = "^1.0.59"
wasm-bindgen-futures = "0.4.1"
wasm-bindgen = { version = "0.2.63"  }
web-sys = { version = "0.3.42", features = ["console"] }

[profile.release]
lto = true
opt-level = "s"